# UniAlloc

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml.example
unialloc/: Cargo.toml  README.md  build.rs
unialloc/.cargo/: config
unialloc/benches/: lib.rs  linked_list.rs  multi1.rs  multi2.rs  slice.rs  str.rs  string.rs  vec.rs  vec_deque.rs  vec_deque_append.rs
unialloc/benches/btree/: map.rs  set.rs
unialloc/benches/homemade/: mod.rs  stress_collect.rs  stress_push_pop.rs
unialloc/examples/: binary_heap.rs  build_script_test.rs  many_threads.rs  multithread.rs  small_heap.rs  std_map_bench.rs  std_vec_bench.rs  tls-single-thread.rs
unialloc/src/: bg_thread.rs  error.rs  lib.rs  mpmc.rs  prelude.rs  sync.rs  zone.rs
unialloc/src/alloc_api/: cpu_cache.rs  mod.rs  type_aware.rs
unialloc/src/arena/: mod.rs  test.rs
unialloc/src/bitmap_alloc/: bitmap.rs  bitmap_heap.rs  mod.rs  simd_bitmap.rs
unialloc/src/buddy_system/: buddy.rs  consts.rs  heap.rs  mod.rs  sync.rs
unialloc/src/cache/: cpu_cache.rs  mod.rs  thread_array_cache.rs  thread_cache.rs  thread_mem_cache.rs
unialloc/src/collections/: concurrent.rs  linklist.rs  mod.rs  radix_tree.rs  radix_tree_128.rs
unialloc/src/freelist/: bump.rs  mod.rs
unialloc/src/mm/: linklist.rs  mod.rs
unialloc/src/page/: efficient_page.rs  mod.rs  separate_page.rs
unialloc/src/pal/: mod.rs  sync.rs  sys_alloc.rs  thread.rs
unialloc/src/sc/: efficient_sc.rs  mod.rs  (+1 more)
unialloc/tests/: allocator.rs  binary_heap.rs  boxed.rs  heap.rs  linked_list.rs  sanity-check.rs  slice.rs  vec.rs  vec_deque.rs
(+36 files in other folders)
