[package]
name = "unialloc"
version = "0.1.0"
authors = ["sslab_gatech <sslab@cc.gatech.edu>"]
edition = "2018"

[dependencies]
libc = { version = "0.2", default-features = false }
spin = { version = "0.9.0" }
alloc_macros = { path = "../alloc_macros" }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
bencher = "0.1.4"
rand_xorshift = "0.2"
iai = "0.1"
mimalloc = { version = "0.1.25", default-features = false }
rusty-hook = "0.11.2"
cfg-if = "1.0.0"

[target.'cfg(unix)'.dev-dependencies]
jemallocator = "0.3.2"
tcmalloc = { version = "0.3.0"}
snmalloc-rs = { version = "0.2.27"}
[build-dependencies]
num_cpus = "1.0"
page_size = "0.4.2"
libc = "0.2.93"
cfg_aliases = "0.1.0"

[[bench]]
name = "std_bench"
path = "benches/lib.rs"
test = true

[features]
default = ["pthread_dtor", "rseq"]
fixed_heap = []
hugepage = []
rseq = []
pthread_dtor = []
static_dtor = []
bench_jemalloc = []
bench_ourself = []
bench_ptmalloc = []
bench_mimalloc = []
bench_tcmalloc = []
bench_snmalloc = []
allow_mem_leak = []

[lib]
doctest = false
